[gd_scene load_steps=2 format=3 uid="uid://h4iu6owpe3dq"]

[ext_resource type="Script" path="res://main.gd" id="1_pvqtm"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvqtm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -323.5
offset_bottom = 323.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 2

[node name="SaveStrButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save String
\"Hello World\""

[node name="LoadStrButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Read String"

[node name="SaveIntButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Int
6"

[node name="LoadIntButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Read Int
"

[node name="SaveFloatButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Float 
6.987654321"

[node name="LoadFloatButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Read Float
"

[node name="SaveBoolButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save Bool
true"

[node name="LoadBoolButton" type="Button" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Read Bool
"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/SaveStrButton" to="." method="_on_save_str_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/LoadStrButton" to="." method="_on_load_str_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/SaveIntButton" to="." method="_on_save_int_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/LoadIntButton" to="." method="_on_load_int_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/SaveFloatButton" to="." method="_on_save_float_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/LoadFloatButton" to="." method="_on_load_float_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/SaveBoolButton" to="." method="_on_save_bool_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GridContainer/LoadBoolButton" to="." method="_on_load_bool_button_pressed"]
